# cinnamon-screensaver

./: Makefile.am  autogen.sh  cinnamon-screensaver.pot  configure.ac
data/: Makefile.am
debian/: control
libcscreensaver/: cs-screen-x11.c
po/: Makevars  POTFILES.in
screensavers/xscreensaver@cinnamon.org/: main
src/: Makefile.am  cinnamon-screensaver-plugin-configure.py  constants.py  gs-lock-plug.c  gs-marshal.c  gs-window-x11.c  osk.py  powerWidget.py  stage.py  uPowerProxy.py
src/binfiles/: Makefile.am  cinnamon-screensaver-plugin-configure  cinnamon-screensaver-plugin-configure.in
src/dbusdepot/: logindClient.py
src/tests/: test-osk
src/util/: Makefile.am  screensaverPluginConfig.py
src/widgets/: powerWidget.py
